# audio_core

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  EqualizerEngine.cpp  EqualizerEngine.h  native-lib.cpp
android/src/main/kotlin/com/flutter_rust_bridge/audio_core/: AndroidMetadataWriter.kt  AudioFingerprintExtractor.kt  ChromaprintNative.kt  CppEqualizerProcessor.kt  CppFingerprintProcessor.kt  FFTAudioProcessor.kt  MetadataWriteException.kt  MyExoplayerPlugin.kt  NativeLog.kt
apple/Classes/: AppleAudioEngine.swift  AppleAudioSessionManager.swift  AppleEqualizer.swift  AudioCorePlugin.swift  PlaybackDeck.swift  SecurityScopedFileAccess.swift
cargokit/build_tool/lib/src/: target.dart
cargokit/gradle/: plugin.gradle
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/audio_core_example/: MainActivity.kt
example/integration_test/: audio_playback_test.dart  simple_test.dart  track_artwork_palette_test.dart
example/integration_test/palette/: palette_generator_debug.dart
example/ios/: pod_install_output.txt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: android_media_library_picker.dart  apple_directory_tab.dart  equalizer_panel.dart  main.dart  mesh_demo_tab.dart  metadata_tab.dart  random_lab_tab.dart  widgets.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: audio_core.podspec
ios/Classes/: AppleAudioEngine.swift  AppleEqualizer.swift  AudioCorePlugin.swift  PlaybackDeck.swift
lib/: audio_core.dart  audio_visualizer_player.dart
lib/src/: android_metadata_models.dart  android_track_metadata.dart  app_log.dart  equalizer_controller.dart  fft_frame.dart  fft_processor.dart  player_controller.dart  player_models.dart  playlist_controller.dart  playlist_models.dart  random_playback_manager.dart  random_playback_models.dart  track_artwork.dart  track_metadata.dart  visualizer_controller.dart  visualizer_output_config.dart  visualizer_output_manager.dart  visualizer_output_stream.dart  visualizer_player_controller.dart  waveform_pcm_processor.dart
lib/src/audio_engine/: android_audio_engine.dart  apple_audio_engine.dart  audio_engine_interface.dart  rust_audio_engine.dart  track_artwork_support.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart  simple_api.dart
lib/src/rust/api/simple/: audio_fingerprint.dart  controller.dart  equalizer.dart  metadata.dart  palette.dart
linux/: CMakeLists.txt
macos/: audio_core.podspec
macos/Classes/: AppleAudioEngine.swift  AppleAudioSessionManager.swift  AudioCorePlugin.swift  PlaybackDeck.swift  SecurityScopedFileAccess.swift
rust/: Cargo.toml
rust/audio_fingerprint_getter/: Cargo.toml
rust/palette/: Cargo.toml
rust/palette/src/: lib.rs  main.rs
rust/palette/test/: result.js  result5.js  result5_stable.js
rust/src/: bin_test.rs  frb_generated.rs  main.rs
rust/src/api/: simple.rs
rust/src/api/simple/: audio_fingerprint.rs  controller.rs  equalizer.rs  metadata.rs  palette.rs  waveform.rs
test/: auto_advance_status_test.dart  player_controller_state_test.dart  waveform_pcm_processor_test.dart
test/decoed_imgs/: test (1).raw  test (10).raw  test (11).raw  test (12).raw  test (13).raw  test (15).raw  test (16).raw  test (17).raw  test (18).raw  test (19).raw  test (2).raw  test (20).raw  test (21).raw  test (22).raw  test (23).raw  test (24).raw  test (25).raw  test (26).raw  test (27).raw  test (28).raw  test (29).raw  test (3).raw  test (30).raw  test (31).raw  test (32).raw  test (33).raw  test (34).raw  test (35).raw  test (36).raw  test (37).raw  test (38).raw  test (39).raw  test (4).raw  test (40).raw  test (41).raw  test (42).raw  test (43).raw  test (44).raw  test (45).raw  test (46).raw  (+7 more)
windows/: CMakeLists.txt
