[package]
name = "palette_core"
version = "0.1.0"
edition = "2021"

[dependencies]
color_quant = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
anyhow = "1.0.102"
fast_image_resize = "6.0.0"
zune-core = "0.5.1"
zune-image = { version = "0.5.0", default-features = false, features = ["jpeg", "png"] }
